<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".timerfragment">


    <android.support.v7.widget.CardView
        android:id="@+id/TimerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorLightGrey2"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:background="@layout/round_button3" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                app:srcCompat="@drawable/ic_alarm_white_24dp" />

            <TextView
                android:id="@+id/TimerText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="27dp"
                android:text="@string/timer"
                android:textColor="@color/colorDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TimerDesc"
                android:layout_width="180dp"
                android:layout_height="46dp"
                android:layout_marginBottom="10dp"
                android:layout_alignStart="@+id/TimerText"
                android:layout_below="@+id/TimerText"
                android:text="@string/allocate_time_and_ignore_distractions"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ToDoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorLightGrey2"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:background="@layout/round_button3" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                app:srcCompat="@drawable/ic_list_white_24dp" />

            <TextView
                android:id="@+id/ToDoText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="37dp"
                android:text="@string/task_list"
                android:textColor="@color/colorDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ToDoDesc"
                android:layout_width="180dp"
                android:layout_height="46dp"
                android:layout_marginBottom="10dp"
                android:layout_alignStart="@+id/ToDoText"
                android:layout_below="@+id/ToDoText"
                android:text="@string/list_objectives_and_goals"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/ReminderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/colorLightGrey2"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:background="@layout/round_button3" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                app:srcCompat="@drawable/ic_event_note_white_24dp" />

            <TextView
                android:id="@+id/ScheduleText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="37dp"
                android:text="@string/schedule"
                android:textColor="@color/colorDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ScheduleDesc"
                android:layout_width="183dp"
                android:layout_height="46dp"
                android:layout_marginBottom="10dp"
                android:layout_alignStart="@+id/ScheduleText"
                android:layout_below="@+id/ScheduleText"
                android:text="@string/create_a_schedule_to_organise_your_time"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />
        </RelativeLayout>

</android.support.v7.widget.CardView>



</LinearLayout>